@@ -14,6 +14,18 @@
                     "templates": [
                         "@@templates_all"
                     ]
+                },{
+                    "caption": "Automatic anchors",
+                    "name": "auto_anchors",
+                    "description": "Give all headings on this page (H1-H6) an ID (if they don't have one already). This allows you (or the ToC menu) to link directly to that heading. This setting is inherited on child pages.",
+                    "type": "listbox",
+                    "category": "Navigation",
+                    "sortOrder": "1",
+                    "defaultValue": "@INHERIT 0",
+                    "inputOptionValues": "On==1||Off==0",
+                    "templates": [
+                        "@@templates_all"
+                    ]
                 }
             ],
 
