@@ -3,9 +3,13 @@ Home",
 "BasicOverview",
 "Basic - Overview",
 "BasicDetail",
+"BasicDetailToC",
 "Basic - Detail",
+"Basic - Detail (ToC)",
 "HeaderVertical",
+"HeaderVerticalToC",
 "Header - Vertical",
+"Header - Vertical (ToC)",
 "Publications",
 "Publications - Overview",
 "Blog",
