@@ -3,6 +3,10 @@ Home",
 "BasicOverview",
 "Basic - Overview",
 "BasicDetail",
+"BasicDetailToC",
 "Basic - Detail",
+"Basic - Detail (ToC)",
 "HeaderVertical",
-"Header - Vertical
+"HeaderVerticalToC",
+"Header - Vertical",
+"Header - Vertical (ToC)
