@@ -1,4 +1,4 @@
 <[[+level]] id="[[+value:stripAsAlias]]" class="ui [[+alignment]] header">
     [[+value]]
-    <a class="anchor" href="[[~[[*id]]]]#[[+value:stripAsAlias:lcase]]"><i class="small linkify icon"></i></a>
 </[[+level]]>
+[[-<a class="anchor" href="[[~[[*id]]]]#[[+value:stripAsAlias:lcase]]"><i class="small linkify icon"></i></a>]]
