@@ -1,3 +1,3 @@
 <nav id="submenu" class="ui large secondary vertical fluid right pointing [[+sticky:eq=`1`:then=`sticky`]] toc menu">
-    [[!tableOfContents]]
+    [[- Menu items are generated by the TableOfContents plugin]]
 </nav>
